# Banking_API_Course

./: .dockerignore  .gitignore  README.md  local.yml  pyproject.toml
.envs/: .env.example
backend/: requirements.txt
backend/app/: main.py  settings.py
backend/app/api/routes/: home.py
backend/app/core/: config.py  db.py  logging.py
backend/docker/local/fastapi/: Dockerfile  entrypoint.sh  start.sh
backend/docker/local/postgres/: Dockerfile
backend/docker/local/traefik/: traefik.yml
