[project]
name = "banking-api-course"
version = "0.1.0"
description = "Banking_API_Course"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "fastapi[standard]>=0.129.0",
    "greenlet==3.3.1",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings==2.13.0",
    "sqlmodel==0.0.33",
]
