[project]
name = "banking-api-course"
version = "0.1.0"
description = "Banking_API_Course"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib==5.1.0",
    "alembic==1.18.4",
    "argon2-cffi==25.1.0",
    "asyncpg==0.31.0",
    "celery==5.6.2",
    "email-validator==2.3.0",
    "fastapi-mail==1.6.2",
    "fastapi[standard]>=0.129.0",
    "flower==2.0.1",
    "greenlet==3.3.1",
    "jsonpickle==1.4.2",
    "loguru==0.7.3",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings==2.13.0",
    "redis==7.3.0",
    "redisbeat==1.2.6",
    "sqlmodel==0.0.33",
]
